--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://memohuracan.github.io/reactPortafolio/",
   "name": "react-portafolio",
   "version": "0.1.0",
   "private": true,
